--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,22 @@
+doctype html
 html
-    head
+    <head>
         title My Site - #{title}
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <link href="/css/main.css" rel="stylesheet">
+
+        meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css")
+        link(rel="stylesheet" href="/css/styles.css")
+        link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+        script(defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js")
+
+
+
+    </head>
     body
+        .navbar-fixed
+            nav
+                .nav-wrapper.blue-grey.darken-3
+                    block nav
         block content
+        block scripts
+            script(src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js")
