--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -2,11 +2,11 @@ extends layout.pug
 
 block nav
     ul
-        li: a(class="btn" href="/recipes/new") Create
-        li: a(class="btn" href="/recipes/browse") Browse
+        li: a(href="/recipes/new") Add Recipe
+        li: a(href="/recipes/browse") Browse
     .right
         form(action="/logout" method="POST")
-            button(class="btn waves-effect waves-light blue" type="submit") Logout
+            button(class="btn waves-effecteate waves-light blue" type="submit") Logout
 block content
     if recipes
         .container
