--- a/views/register.pug
+++ b/views/register.pug
@@ -19,4 +19,6 @@ block content
                     br
                     label(for="verifyPassword") Verify Password
                     input(type="password" id="verifyPassword" name="verifyPassword" placeholder="Re-enter Password")
-                    button(class="btn waves-effect waves-light blue" type="submit") Submit<i class="material-icons right">send</i>
+                    button(class="btn waves-effect waves-light blue" type="submit" disabled) Submit<i class="material-icons right">send</i>
+
+    script(src="/js/register.js")
