Image scraper for WP functional

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -13,7 +13,7 @@ block content
             .row
 
                 each recipe in recipes
-                    .col.s12.m4
+                    .col.s8.offset-s2.m4
                         .card
                             .card-image
                                 img(src=recipe.image)
