--- a/views/newrecipe.pug
+++ b/views/newrecipe.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block nav
     ul
-        li: a(href="/recipes/new") Dashboard
+        li: a(href="/") Dashboard
         li: a(href="/recipes/browse") Browse
     .right
         form(action="/logout" method="POST")
@@ -18,9 +18,6 @@ block content
                     .input-field
                         input(type="text" id="title" name="title" placeholder="Enter Title for Recipe")
                         label(for="title") Title
-                    .input-field
-                        input(type="text" id="imageUrl" name="imageUrl" placeholder="Enter Image URL")
-                        label(for="imageUrl") Image URL
                     .input-field
                         input(type="text" id="description" name="description" placeholder="Enter a brief description")
                         label(for="description") Description
