CDN stuff, minor style change

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -11,9 +11,8 @@ block content
     if recipes
         .container
             .row
-
                 each recipe in recipes
-                    .col.s8.offset-s2.m4
+                    .col.s12.m4
                         .card
                             .card-image
                                 img(src=recipe.image)
