--- a/views/recipes.pug
+++ b/views/recipes.pug
@@ -14,7 +14,7 @@ block content
 
                 each recipe in recipes
                     .col.s12.m4
-                        .card
+                        .card.small
                             .card-image
                                 img(src=recipe.image)
                                 span.card-title #{recipe.title}
